--- a/Frontend/src/Scss/AuthForm.module.scss
+++ b/Frontend/src/Scss/AuthForm.module.scss
@@ -1,6 +1,13 @@
 .register,
 .login {
-	flex: 1;
+	width: 50vw;
+	height: 50vh;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-direction: column;
+	gap: 1rem;
+	margin: 0 auto;
 }
 
 .title {
@@ -10,9 +17,29 @@
 .authForm {
 	margin-top: 2rem;
 	width: 100%;
+	display: flex;
+	flex-direction: column;
+	gap: 2rem;
 
 	label {
 		width: 100%;
 		font-size: 2rem;
+		display: flex;
+		flex-direction: column;
+
+		input {
+			padding: 0.6rem;
+		}
 	}
+
+	button {
+		width: 30%;
+		margin: 0 auto;
+		padding: 0.9rem;
+	}
+}
+
+.text_link {
+	color: blue;
+	cursor: pointer;
 }
