--- a/Frontend/src/Scss/Layout.module.scss
+++ b/Frontend/src/Scss/Layout.module.scss
@@ -1,7 +1,14 @@
 button {
-	padding: 0.7rem;
+	padding: 0.8rem;
 	color: whitesmoke;
 	background-color: #303030;
-	border: none;
-	border-radius: 0.3rem;
+	border: 1px solid #303030;
+	border-radius: 0.6rem;
+	transition: 0.2s;
+
+	&:hover {
+		transition: 0.2s;
+		color: #303030;
+		background-color: transparent;
+	}
 }
